grammar/test/corpus/items.txt
===
one empty text item
===
[]
	<>
---
(file (entry (key) (list (item (text)))))

===
one item of short text
===
[]
	reserved chars #/@=<>[]{} TABs are fine in one-liner short text...
	<>
		#EXCEPT for 1st char
---
(file (entry (key) (list
  (item (text (line)))
  (item (text (line)))
)))

===
items can be dicts/lists
===
[]
	{}
		one=1
		two=2
	[]
		one=1
		two=2
---
(file (entry (key) (list
  (item (dict
    (entry (key) (text (line)))
    (entry (key) (text (line)))
  ))
  (item (list
    (item (text (line)))
    (item (text (line)))
  ))
)))

===
but items don't have keys - dict
:error
===
[]
	{error}
		key=value
---

===
but items don't have keys - list
:error
===
[]
	[error]
		line
---
