sitter/test/corpus/entries.txt
===
first has gap
===

key=value
---
(file (entry (gap) (key) (text (line))))

===
first has key comment 1 line
===
// a short paragraph about the key that follows
key=value
---
(file (entry (comment (line)) (key) (text (line))))

===
first has key comment 3 lines
===
// a short paragraph about the key that follows
	# this is a markdown H1
	and another short paragraph
key=value
---
(file (entry (comment (line) (line) (line)) (key) (text (line))))

===
first has gap and key comment
===

// a longer paragraph
	about the key that follows
key=value
---
(file (entry (gap) (comment (line) (line)) (key) (text (line))))

===
angle brackets open a text block
===
<any <chars> # [except] @ {LF} allowed>
	start of text block, just one LF char here:
	the last line of text block has no LF at end
---
(file (entry (key) (text (line) (line))))

===
square brackets open a list context
===
[any <chars> # [except] @ {LF} allowed]
---
(file (entry (key) (list)))

===
curly brackets open a dictionary context
===
{any <chars> # [except] @ {LF} allowed}
---
(file (entry (key) (dict)))

===
keys can contain LF chars
===
@use this form for multi-line keys
	after the key put empty (no key) brackets...
<>
	angle for text, square for list, curly for dict
---
(file (entry (key (line) (line)) (text (line))))

===
elide works everywhere
===
[]
	[]
	[]
		[]
[]
---
(file
  	(entry (key) (list
    	(item (list)) (item (list (item (list)))
	)))
	(entry (key) (list))
)
