sitter/test/corpus/items.txt
===
one empty text item
===
[]
	<>
---
(file (entry (key) (list (item (text)))))

===
one item of short text
===
[]
	reserved chars #/@=<>[]{} TABs are fine in one-liner short text...
	<>
		#EXCEPT for 1st char
---
(file (entry (key) (list
  (item (text (line)))
  (item (text (line)))
)))
